Fix sspacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -182,6 +182,12 @@ a.divLink {
   margin-right: 1rem;
 }
 
+.list-media-img {
+  border-radius: 0;
+  max-width: 100%;
+  height: auto;
+}
+
 h1, h2, h3 {
   font-weight: normal;
 }
@@ -303,4 +309,8 @@ blockquote {
 
 .list-entry-title {
   text-decoration: none;
+}
+
+.post-date {
+  margin: 0;
 }
